<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart DO v2.0</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">recorder</string>
    <string name="title_section2">monitor</string>
    <string name="title_section3">calibrate</string>
    <string name="txt_delete">delete</string>
    <string name="txt_attach">attach</string>
    <string name="txt_send_email">email</string>
    <string name="txt_start_time">00:00:00</string>
    <string name="txt_zero">000.0</string>
    <string name="txt_temp_sign">Temp</string>
    <string name="txt_depth_sign">Depth</string>
    <string name="txt_rdo_sign">DO</string>
    <string name="txt_rdo_sat_sign">SAT</string>
    <string name="txt_orp_sign">ORP</string>
    <string name="txt_ph_sign">PH</string>
    <string name="txt_act_sign">Act Cond</string>
    <string name="txt_baro_sign">Baro</string>
    <string name="txt_temp_unit">℃</string>
    <string name="txt_depth_unit">ft</string>
    <string name="txt_rdo_unit">%SAT</string>
    <string name="txt_rdo_sat_unit">mg/L</string>
    <string name="txt_orp_unit">mV</string>
    <string name="txt_ph_unit">pH</string>
    <string name="txt_act_unit">us/cm</string>
    <string name="txt_baro_unit">kpa</string>
    <string name="txt_start_monitor">Start</string>
    <string name="txt_stop_monitor">stop</string>
    <string name="txt_empty">no device</string>
    <string name="txt_device_connected">Device</string>
    <string name="txt_connect">connect</string>
    <string name="txt_disconnect">disconnect</string>
    <string name="txt_connect_at_start">connect at start</string>
    <string name="txt_unconnected">unconnected</string>
    <string name="txt_connected">connected</string>
    <string name="txt_monitor_time">time:</string>
    <string name="txt_default_monito_time">00:30</string>
    <string name="txt_create">create</string>
    <string name="txt_edit">edit</string>
    <string name="txt_name">name:</string>
    <string name="txt_description">description</string>
    <string name="txt_unkown">unknown</string>
    <string name="txt_camera">camera</string>
    <string name="txt_image">image</string>
    <string name="txt_latitude">latitude</string>
    <string name="txt_longtitude">longtitude</string>
    <string name="txt_gps">gps</string>
    <string name="txt_location">location :</string>
    <string name="txt_save">save</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_device">device :</string>
    
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_setting">Setting</string>
    <string name="txt_spinner">txt_spinner</string>
    <string name="txt_time">time:</string>
    <string name="txt_produce">produce</string>
    <string name="code">code</string>
    <string name="role">role</string>
    <string name="calibration_one">point one</string>
    <string name="calibration_two">point two</string>
    <string name="txt_get">get</string>
    <string name="txt_calibration">calibration</string>
    <string name="txt_smarter">meter :</string>
    <string name="txt_probe">probe :</string>
    <string name="txt_default_id">--</string>
    <string name="txt_default_sn">------------</string>
    <string name="txt_device_update">update</string>
    <string name="txt_record">record</string>
    <string name="txt_delete_quire">Delete or not?</string>
    <string name="txt_yes">YES</string>
    <string name="txt_no">NO</string>
    <string name="txt_locating_fail">Locating failed!</string>
    <string name="txt_calibrate_zero">Set ZERO</string>
    <string name="txt_calibrate_air">Calibrate</string>
    <string name="txt_restore_calibration">Restore</string>
    <string name="txt_wait">Please, waiting</string>
    <string name="txt_wait_connecting">Connecting </string>
    <string name="txt_wait_calibrate">Calibrating </string>
    <string name="txt_wait_restore">Restoring </string>
    <string name="txt_set">Set</string>
    <string name="txt_zero_prompt">Put PROBE in FREE oxygen environment.</string>
    <string name="txt_air_prompt">Put PROBE in SATURATE oxygen environment.</string>
    <string name="txt_calibration_complete">Calibration succeed!</string>
    <string name="txt_calibration_incomplete">Calibration failed!</string>
    <string name="txt_restore_complete">Restore succeed!</string>
    <string name="txt_restore_incomplete">Restore failed!</string>
</resources>
