<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="2dp"
    android:background="@color/light_grey"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp" >

        <TextView
            android:id="@+id/view_mono_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name" />

        <EditText
            android:id="@+id/et_salinity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txt_unkown" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_description" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txt_unkown" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp" >

        <ImageView
            android:id="@+id/iv_pic"
            android:layout_width="176dp"
            android:layout_height="176dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/txt_unkown"
            android:src="@drawable/ic_launcher" />

        <ImageButton
            android:id="@+id/btn_camera"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/icon_camera"
            android:text="@string/txt_camera" />

        <ImageButton
            android:id="@+id/btn_image"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btn_camera"
            android:src="@drawable/icon_picture"
            android:text="@string/txt_image" />

        <ImageButton
            android:id="@+id/btn_gps"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btn_image"
            android:src="@drawable/icon_location"
            android:text="@string/txt_gps" />
        
        <TextView
            android:id="@+id/view_latitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btn_gps"
            android:text="@string/txt_zero" />

        <TextView
            android:id="@+id/view_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_gps"
            android:layout_toLeftOf="@id/view_latitude_value"
            android:text="@string/txt_latitude" />

        
        <TextView
            android:id="@+id/view_longtitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/view_latitude_value"
            android:text="@string/txt_zero" />

        <TextView
            android:id="@+id/view_longtitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_latitude"
            android:layout_toLeftOf="@id/view_longtitude_value"
            android:text="@string/txt_longtitude" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="8dp" >

        <Button
            android:id="@+id/btn_save"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_save" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_cancel" />

    </LinearLayout>

</LinearLayout>