<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="8dp"
        android:background="#F2E6E6E6" >

        <TextView
            android:id="@+id/view_time_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/view_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_default_monito_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="4dp"
        android:background="#F2E6E6E6"
        android:baselineAligned="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/view_detail_rdo_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/txt_zero"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/monitor_value_size" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_rdo_unit" />

            <TextView
                android:id="@+id/view_detail_rdo_sat_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/txt_zero"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/monitor_value_size" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_rdo_sat_unit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/view_detail_temp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/txt_zero"
                android:textSize="@dimen/monitor_value_size" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_temp_unit" />

            <TextView
                android:id="@+id/view_detail_baro_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="3"
                android:text="@string/txt_zero"
                android:textSize="@dimen/monitor_value_size" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_baro_unit" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/view_detail_location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F2E6E6E6"
            android:text="@string/txt_unkown"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/image_detail_location_image"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:background="#F2E6E6E6"
            android:contentDescription="@string/txt_image"
            android:src="@drawable/logoback" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/txt_send_email" />

</LinearLayout>